增加监控数据点击

--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="opt" *ngIf="!isLogin">
             <button [routerLink]="[ '/dashboard' ]">马上体验</button> &nbsp;
-            <button (click)="isVisible_login=true;">独立账户</button>
+            <button appMonitorABlank (click)="isVisible_login=true;">独立账户</button>
         </div>
     </div>
 </section>
@@ -55,22 +55,22 @@
     <h3 style="margin-left: 16px;">慕课推荐(专栏)</h3>
     <ul>
         <li>
-            <a target="_blank" href="https://s.imooc.com/WzO56cr">从 0 开始学爬虫</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/WzO56cr">从 0 开始学爬虫</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/W7Wmpdv">Webpack 从零入门到工程化实战</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/W7Wmpdv">Webpack 从零入门到工程化实战</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/WM7wYOD">用技术人的眼光看世界 • 程序员技术指北</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/WM7wYOD">用技术人的眼光看世界 • 程序员技术指北</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/WM7wYOD">教你用 Python 进阶量化交易</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/WM7wYOD">教你用 Python 进阶量化交易</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/Wlba9hm">一条龙的 Node·Vue·React 服务器部署</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/Wlba9hm">一条龙的 Node·Vue·React 服务器部署</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/Wxv7KHc">两小时学会 Node.js stream</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/Wxv7KHc">两小时学会 Node.js stream</a>
         </li>
     </ul>
 </section>
@@ -78,28 +78,28 @@
     <h3 style="margin-left: 16px;">慕课推荐(实战)</h3>
     <ul>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SnNi1QQ">剑指Java面试-Offer直通车</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SnNi1QQ">剑指Java面试-Offer直通车</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SNTMyFV">纯正商业级应用－Node.js Koa2开发微信小程序服务端</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SNTMyFV">纯正商业级应用－Node.js Koa2开发微信小程序服务端</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SoXuPiZ">前端下一代开发语言TypeScript 从基础到axios实战</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SoXuPiZ">前端下一代开发语言TypeScript 从基础到axios实战</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SYa6RSU">JavaScript版 数据结构与算法</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SYa6RSU">JavaScript版 数据结构与算法</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SXZyu9o">部署落地+业务迁移 玩转k8s进阶与企业级实践技能</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SXZyu9o">部署落地+业务迁移 玩转k8s进阶与企业级实践技能</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/ScyFAfI">微信分享与支付专项课程 （公众号 小程序（云））</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/ScyFAfI">微信分享与支付专项课程 （公众号 小程序（云））</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/Ssc67Nu">React新特性Hooks 重构去哪儿网火车票PWA</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/Ssc67Nu">React新特性Hooks 重构去哪儿网火车票PWA</a>
         </li>
         <li>
-            <a target="_blank" href="https://s.imooc.com/SxjKSih">从基础到实战 手把手带你掌握新版Webpack4.0</a>
+            <a appMonitorABlank target="_blank" href="https://s.imooc.com/SxjKSih">从基础到实战 手把手带你掌握新版Webpack4.0</a>
         </li>
     </ul>
 </section>
@@ -108,31 +108,31 @@
         <div class="grid">
             <h3>资源</h3>
             <ul>
-                <li><a target="_blank" href="https://angular.cn/" title="Angular官网">Angular</a></li>
-                <li><a target="_blank" href="https://docs.mongodb.com/" title="数据库MongoDB">MongoDB</a>
+                <li><a appMonitorABlank target="_blank" href="https://angular.cn/" title="Angular官网">Angular</a></li>
+                <li><a appMonitorABlank target="_blank" href="https://docs.mongodb.com/" title="数据库MongoDB">MongoDB</a>
                 </li>
-                <li><a target="_blank" href="https://ant.design/" title="UI设计模式">Ant Design</a></li>
-                <li><a target="_blank" href="https://ng.ant.design/" title="Ant Design的Angular实现">NG-ZORRO</a>
+                <li><a appMonitorABlank target="_blank" href="https://ant.design/" title="UI设计模式">Ant Design</a></li>
+                <li><a appMonitorABlank target="_blank" href="https://ng.ant.design/" title="Ant Design的Angular实现">NG-ZORRO</a>
                 </li>
             </ul>
         </div>
         <div class="grid">
             <h3>帮助</h3>
             <ul>
-                <li><a target="_blank" href="https://github.com/kisslove/web-monitoring" title="源码仓库">GitHub</a></li>
-                <li><a target="_blank" href="/assets/images/weixin-gongzhonghao.jpg" title="关注公众号">公众号</a>
+                <li><a appMonitorABlank target="_blank" href="https://github.com/kisslove/web-monitoring" title="源码仓库">GitHub</a></li>
+                <li><a appMonitorABlank target="_blank" href="/assets/images/weixin-gongzhonghao.jpg" title="关注公众号">公众号</a>
                 </li>
-                <li><a target="_blank" href="/assets/images/weixin.png" title="微信">支持作者</a></li>
+                <li><a appMonitorABlank target="_blank" href="/assets/images/weixin.png" title="微信">支持作者</a></li>
             </ul>
         </div>
         <div class="grid">
             <h3>推广(招商中)</h3>
             <ul>
-                <li><a target="_blank" href="https://www.51link.com/?ruid=9095"
+                <li><a appMonitorABlank target="_blank" href="https://www.51link.com/?ruid=9095"
                         title="发现一个非常不错的友情链接平台，可以买卖友链，可以交换友链，朋友们可以试试。">51 链</a>
                 </li>
-                <li><a target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=9xbvcsop">阿里云优惠购</a></li>
-                <li><a target="_blank" href="http://coolwow.myselfbuy.com/" title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
+                <li><a appMonitorABlank target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=9xbvcsop">阿里云优惠购</a></li>
+                <li><a appMonitorABlank target="_blank" href="http://coolwow.myselfbuy.com/" title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
                 </li>
             </ul>
         </div>
@@ -154,7 +154,7 @@
     </nz-form-item>
     <nz-form-item style="margin-bottom:0;">
         <nz-form-control [nzSm]="24" [nzXs]="24" style="text-align: right;width:90%;">
-            <span>没有账户?</span><span (click)="isVisible_login=false;isVisible_register=true;"
+            <span>没有账户?</span><span appMonitorABlank (click)="isVisible_login=false;isVisible_register=true;"
                 style="margin-left: 24px;text-decoration: underline;cursor: pointer;">马上注册</span>
         </nz-form-control>
     </nz-form-item>
