--- a/web/src/app/dashboard/sys-list/sys-list.component.scss
+++ b/web/src/app/dashboard/sys-list/sys-list.component.scss
@@ -5,9 +5,10 @@
     z-index: 1;
     p{
         margin-bottom: 4px;
+        font-weight: bold;
+        font-size: 12px;
         span{
             color: #52c41a;
-            padding-left: 4px;
         }
     }
 }
