--- a/web/src/app/web/web-sys/sys-index/sys-index.component.scss
+++ b/web/src/app/web/web-sys/sys-index/sys-index.component.scss
@@ -5,6 +5,7 @@
     z-index: 1;
     p{
         margin-bottom: 4px;
+        font-weight: bold;
         span{
             color: #52c41a;
             padding-left: 4px;
