--- a/web/src/app/web/web-sys/js-error/js-error.component.html
+++ b/web/src/app/web/web-sys/js-error/js-error.component.html
@@ -1,101 +1,85 @@
 <div nz-row style="padding-left:24px;">
-    <div style="overflow:auto;padding:24px 8px;border-right: 1px solid #e6ebef;" #mydetailsContent nz-col nzSpan="7">
-        <nz-tabset>
-            <nz-tab nzTitle="错误率排行">
-                <nz-input-group nzSearch [nzSuffix]="suffixIconButton" style="margin-bottom: 8px;">
-                    <input type="text" nz-input placeholder="请输入要查询的关键字">
-                  </nz-input-group>
-                  <ng-template #suffixIconButton>
-                    <button nz-button nzType="primary" nzSearch>
-                      <i class="anticon anticon-search"></i>
-                    </button>
-                  </ng-template>
-                  <div class="custom-default-list selected">
-                    <span class="left">dashboard/process/lifeCycleInfo/9705</span>
-                    <span class="right">
-                      <span>100%</span>
-                      <i class="anticon anticon-right"></i>
-                    </span>
-                  </div>
-                  <div class="custom-default-list">
-                    <span class="left">baidu.com</span>
-                    <span class="right">
-                      <span>50%</span>
-                      <i class="anticon anticon-right"></i>
-                    </span>
-                  </div>
-            </nz-tab>
-            <nz-tab nzTitle="错误聚类排行">
-                <nz-input-group nzSearch [nzSuffix]="suffixIconButton" style="margin-bottom: 8px;">
-                    <input type="text" nz-input placeholder="请输入要查询的关键字">
-                  </nz-input-group>
-                  <ng-template #suffixIconButton>
-                    <button nz-button nzType="primary" nzSearch>
-                      <i class="anticon anticon-search"></i>
-                    </button>
-                  </ng-template>
-                  <div class="custom-default-list selected">
-                    <span class="left">www.baidu.com</span>
-                    <span class="right">
-                      <span>250</span>
-                      <i class="anticon anticon-right"></i>
-                    </span>
-                  </div>
-                  <div class="custom-default-list">
-                    <span class="left">baidu.com</span>
-                    <span class="right">
-                      <span>20</span>
-                      <i class="anticon anticon-right"></i>
-                    </span>
-                  </div>
-            </nz-tab>
-          </nz-tabset>
-  
-    </div>
-    <div style="overflow:auto;padding:24px 16px;" #mydetailsContent nz-col nzSpan="17">
-      <div nz-row>
-        <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="JS错误率" [nzExtra]="extradlTemplate">
-            <!-- <app-custom-highchart></app-custom-highchart> -->
-          </nz-card>
-          <ng-template #extradlTemplate>
-            <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
-          </ng-template>
-        </div>
+  <div style="overflow:auto;padding:24px 8px;border-right: 1px solid #e6ebef;" #mydetailsContent nz-col nzSpan="7">
+    <h4>按JS错误时间排行</h4>
+    <nz-input-group nzSearch [nzSuffix]="suffixIconButton" style="    margin-bottom: 8px;">
+      <input type="text" [(ngModel)]="keywords" nz-input placeholder="请输入要查询的关键字">
+    </nz-input-group>
+    <ng-template #suffixIconButton>
+      <button nz-button nzType="primary" (click)="search()" nzSearch>
+        <i class="anticon anticon-search"></i>
+      </button>
+    </ng-template>
+    <nz-spin [nzSpinning]="isSpinning.spin1">
+      <div (click)="selectListItem(item)" class="custom-default-list" [ngClass]="{'selected': item.select}" *ngFor="let item of
+          jsErrorListData">
+        <span title="{{item.geo}}" class="left"
+          style="width:200px;">{{item.error.substr(0,60)}}</span>
+        <span class="right">
+          <span>{{item.createTime|date:'yyyy-MM-dd HH:mm'}}</span>
+          <i class="anticon anticon-right"></i>
+        </span>
       </div>
-      <div nz-row>
-        <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="地理分布" [nzExtra]="extradlTemplate">
-            <!-- <app-custom-highchart></app-custom-highchart> -->
-          </nz-card>
-          <ng-template #extradlTemplate>
-            <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
-          </ng-template>
-        </div>
-      </div>
-      <div nz-row>
-        <div nz-col class="gutter-row" style="margin-bottom:24px;" [nzSpan]="24">
-          <nz-card nzType="inner" nzTitle="终端分布" [nzExtra]="extradlTemplate">
-              <nz-tabset>
-                  <nz-tab nzTitle="浏览器">
-                    Content of Tab Pane 1
-                  </nz-tab>
-                  <nz-tab nzTitle="操作系统">
-                    Content of Tab Pane 2
-                  </nz-tab>
-                  <nz-tab nzTitle="设备">
-                      Content of Tab Pane 2
-                    </nz-tab>
-                    <nz-tab nzTitle="分辨率">
-                        Content of Tab Pane 2
-                      </nz-tab>
-                </nz-tabset>
-            <!-- <app-custom-highchart></app-custom-highchart> -->
-          </nz-card>
-          <ng-template #extradlTemplate>
-            <app-time-choice-panel (selectOver)="selectOver($event,30)"></app-time-choice-panel>
-          </ng-template>
-        </div>
-      </div>
-    </div>
+    </nz-spin>
   </div>
+  <div style="overflow:auto;padding:24px 16px;" #mydetailsContent nz-col nzSpan="17">
+    <div nz-row>
+      <div>
+        <div nz-row [nzGutter]="8">
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="用户IP">
+              <p>{{currentSelected?.onlineip}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="操作系统">
+              <p>{{currentSelected?.os}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="浏览器">
+              <p>{{currentSelected?.bs}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="分辨率">
+              <p>{{currentSelected?.pageWh}}</p>
+            </nz-card>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div nz-row>
+      <div style="padding-top:8px;">
+        <div nz-row [nzGutter]="8">
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="国家">
+              <p>{{currentSelected?.country_nameCN}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="省份">
+              <p>{{currentSelected?.mostSpecificSubdivision_nameCN}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="城市">
+              <p>{{currentSelected?.city_nameCN}}</p>
+            </nz-card>
+          </div>
+          <div nz-col [nzSpan]="6">
+            <nz-card style="min-height: 100px !important;" nzTitle="服务商">
+              <p>{{currentSelected?.isp}}</p>
+            </nz-card>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div *ngIf="currentSelected" nz-row style="padding-top:32px;">
+      <button nz-button (click)="errorTrack()">错误场景还原</button>
+    </div>
+    <div *ngIf="currentSelected" nz-row style="padding:16px 0px;">
+      <div [innerHTML]="currentSelected?.error">
+      </div>
+    </div> 
+  </div>
+</div>
