--- a/web/src/app/web/web-sys/web-sys.component.html
+++ b/web/src/app/web/web-sys/web-sys.component.html
@@ -25,7 +25,7 @@
             <button *ngIf="isFullScreen" style="margin: 0 8px;vertical-align:
                 middle;" (click)="exitFullScreen()" nz-button nzType="default"><i
                     nz-icon type="shrink" theme="outline"></i>退出全屏</button>
-            <nz-badge style="vertical-align: middle;" nzDot><button nz-button nz-popover nzPlacement="left" [nzTitle]="null" [nzContent]="contentTemplate" nzTrigger="click" nzType="default"><i class="anticon anticon-question"></i>帮助文档</button></nz-badge>
+            <nz-badge style="vertical-align: middle;" nzDot><button nz-button nz-popover nzPlacement="left" [nzTitle]="null" [nzContent]="contentTemplate" nzTrigger="click" nzType="default"><i nz-icon type="money-collect" theme="outline"></i>赏咖啡</button></nz-badge>
             <span *ngIf="showGlobalTimer" style="vertical-align: middle;padding:
                 8px;border: solid 1px #d9d9d9;margin: 0 8px;display:
                 inline-block;line-height: 1;">
